modified:   .github/workflows/test.yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, macos-11]
+        os: [ubuntu-20.04]
         v: [stable]
         vi: [vim]
         cp: [system]
@@ -37,8 +37,9 @@ jobs:
           version: ${{ matrix.v }}
           neovim: ${{ matrix.vi == 'neovim' }}
 
-      - run: |-
-          for f in `grep -l -r microsoft /etc/apt/`; do echo file: $f; cat $f; done
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+        if: ${{ matrix.os == 'ubuntu-20.04' }}
 
       - name: Run tests with ${{ matrix.dl }} and ${{ matrix.cp }} and ${{ matrix.v }}
         if: ${{ steps.check.conclusion == 'skipped' }}
