--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,10 +7,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, windows-2022, macos-11]
-        vi: [neovim, vim]
-        cp: [system, copy, hardlink, symlink]
-        dl: [git, curl, wget]
+        os: [windows-2022]
+        vi: [vim]
+        cp: [system]
+        dl: [git]
     steps:
       - id: check
         if: ${{ (matrix.os == 'windows-2022' && matrix.dl == 'wget') ||
@@ -33,7 +33,7 @@ jobs:
         if: ${{ steps.check.conclusion == 'skipped' && matrix.vi == 'vim' }}
         id: vim
         with:
-          version: 'v8.1.2269'
+          version: 'v8.1.2424'
           neovim: 'false'
 
       - name: Install neovim
@@ -60,7 +60,7 @@ jobs:
           JETPACK_DOWNLOAD_METHOD: ${{ matrix.dl }}
           JETPACK_COPY_METHOD: ${{ matrix.cp }}
           THEMIS_VIM: ${{ steps.neovim.outputs.executable }}
-        run: ./vim-themis/bin/themis ./test/test.vim
+        run: ./vim-themis/bin/themis ./test/test.vim --target self
   post-test:
     name: All tests passed
     runs-on: ubuntu-20.04
